# Younger-Logics-Core

./: .gitmodules  README.md  pyproject.toml
parser/: parse.py
younger_logics_core/: __init__.py
younger_logics_core/commands/: __init__.py  create.py  main.py  output.py  update.py
younger_logics_core/modules/: __init__.py
younger_logics_core/scripts/create/: __init__.py  general_spider.py
